--- a/services/diabites.html
+++ b/services/diabites.html
@@ -139,7 +139,7 @@
             <a class="dropdown-item" href="../services/pscyological.html">Psychological Problems</a>
             <a class="dropdown-item" href="../services/BP.html">Blood Pressure</a>
             <a class="dropdown-item" href="../services/res.html">Respiratory Issues</a>
-            <a class="dropdown-item" href="https://koventhanfreelance.github.io/WoodsClinic/index.html#service" style="text-decoration: underline; color: green;">More</a>
+            <a class="dropdown-item" href="https://woodsclinic.online/#service" style="text-decoration: underline; color: green;">More</a>
           </div>
         </li>
             <li class="nav-item">
