--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <meta name="description" content="Woods Clinic provides treatment to patients suffering from all kinds of physical and psychological problems. Treatment will be provided based upon the ailments through physiotherapy, acupuncture-acupressure, yoga therapy, or flower remedy best applicable for the problem with a holistic approach." />
+    <meta name="description" content="Woods Clinic provides expert physiotherapy and acupuncture treatment in Chennai. We treat all kinds of physical and psychological problems. Open 9am to 9.30pm, Mon-Sat. Call: +91 93616 92951." />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
