--- a/appoinment/appoinment.html
+++ b/appoinment/appoinment.html
@@ -234,7 +234,7 @@ document.getElementById("appointmentForm").addEventListener("submit", function (
     const ownerWhatsApp = "+919361692951";
     const userWhatsApp = mobile; // Assuming this is the user's WhatsApp number
 
-    const bookingDetails = `Booking Details:
+    const bookingDetails = `Booking Detailss:
         Name: ${name}
         Mobile: ${mobile}
         Day: ${slot}
