--- a/appoinment/appoinment.html
+++ b/appoinment/appoinment.html
@@ -251,8 +251,12 @@
         `https://web.whatsapp.com/send?phone=${ownerWhatsApp}&text=${encodeURIComponent(bookingDetails)}` :
         `https://api.whatsapp.com/send?phone=${ownerWhatsApp}&text=${encodeURIComponent(bookingDetails)}`;
     
-    window.open(whatsAppUrl, "_blank");
-
+  const link = document.createElement('a');
+  link.href = whatsAppUrl;
+  link.target = '_blank';
+  link.rel = 'noopener noreferrer';
+  link.click();
+    
     // Reset the form
     document.getElementById("appointmentForm").reset();
 });
