--- a/index.html
+++ b/index.html
@@ -16,7 +16,31 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
-<link rel="manifest" href="./favicon_io/site.webmanifest"> <style>
+<link rel="manifest" href="./favicon_io/site.webmanifest"> 
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org/", 
+  "@type": "BreadcrumbList", 
+  "itemListElement": [{
+    "@type": "ListItem", 
+    "position": 1, 
+    "name": "Book Appoinment",
+    "item": "https://woodsclinic.online/services/BP.html"  
+  },{
+    "@type": "ListItem", 
+    "position": 2, 
+    "name": "DR Mercy Thomas",
+    "item": "https://woodsclinic.online/profile/profile.html"  
+  },{
+    "@type": "ListItem", 
+    "position": 3, 
+    "name": "Reviews",
+    "item": "https://www.google.com/search?sca_esv=5f73eecc9d166b44&hl=en-IN&sxsrf=AHTn8zqc9GvawiPuh2Re_jrd2wIP5s72Sw:1740217201381&si=APYL9bs7Hg2KMLB-4tSoTdxuOx8BdRvHbByC_AuVpNyh0x2Kzc1g_tQdG8neOsXljE3oql7P0Tv4v4AWF2lCLluzzmvhZgPMscaRIE9oCAVHyZf9jBrUGJ4mYbYzgTRxyvCcifKFWs_3&q=WOODS+Reviews&sa=X&ved=2ahUKEwiV-_qg_taLAxUHRWcHHU0ANtsQ0bkNegQILxAE&biw=1536&bih=730&dpr=1.25"  
+  }]
+}
+</script>
+    
+    <style>
       * {
         scroll-behavior: smooth;
       }/* Scroll-Up Icon */
