--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 {
   "@context": "https://schema.org",
   "@type": "SiteNavigationElement",
-  "name": ["Book Appoinment,"Services", "Reviews"],
+  "name": ["Book Appoinment","Services", "Reviews"],
   "url": [
     "https://woodsclinic.online/appoinment/appoinment.html",
     "https://woodsclinic.online/index.html#service",
